@@ -1,7 +1,7 @@
 Package: ngstk
 Type: Package
 Title: Next-Generation Sequencing (NGS) Data Analysis Toolkit
-Version: 0.2.2.2
+Version: 0.2.2.3
 Authors@R: person("Jianfeng", "Li", email = "lee_jianfeng@sjtu.edu.cn", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2349-208X"))
 Description:
     Can be used to facilitate the analysis of NGS data, such as visualization, conversion of data format for WEB service input and other purpose.
@@ -14,9 +14,11 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     stringr (>= 1.2.0),
+    stringi,
     configr (>= 0.3.1),
     data.table,
     future,
+    optparse,
     parallel
 RoxygenNote: 6.1.1
 Suggests: knitr,
