@@ -13,11 +13,16 @@ export(get_files_ctime)
 export(get_files_mtime)
 export(get_pp_samplegroup)
 export(get_split_seqs)
+export(make_option)
 export(merge_table_files)
 export(muts2mutation_mapper)
 export(muts2oncoprinter)
 export(muts2pp)
+export(opt_parser)
 export(par_download)
+export(parse_args)
+export(parse_args2)
+export(print_help)
 export(set_colors)
 export(set_tools)
 export(show_handlers)
@@ -33,6 +38,10 @@ import(data.table)
 import(future)
 import(stringr)
 import(utils)
+importFrom(optparse,OptionParser)
+importFrom(optparse,make_option)
+importFrom(optparse,parse_args)
+importFrom(optparse,parse_args2)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(stringi,stri_rand_strings)
